--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -13,7 +13,7 @@
     "admin": "管理"
   },
   "home": {
-    "welcome": "Softis 豊田市パーソナルピラティススタジオ",
+    "welcome": "Softis\n豊田市パーソナルピラティススタジオ",
     "subtitle": "心身のバランスへの道",
     "getStarted": "始める",
     "aboutSoftis": "Softisとは？",
