--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -10,7 +10,8 @@
     "blog": "ブログ",
     "login": "ログイン",
     "logout": "ログアウト",
-    "admin": "管理"
+    "admin": "管理",
+    "toyotaCityPilates": "豊田市 ピラティス"
   },
   "home": {
     "welcome": "Softis\n豊田市パーソナルピラティススタジオ",
@@ -299,5 +300,24 @@
     "editingLanguage": "編集言語",
     "showMore": "もっと見る",
     "showLess": "表示を減らす"
+  },
+  "toyotaCityPilates": {
+    "seoTitle": "豊田市 ピラティス | 駅徒歩1分 | 理学療法士経営 | Softis",
+    "seoDescription": "豊田市駅徒歩1分のSoftisピラティススタジオ。理学療法士が運営する完全パーソナルピラティススタジオで姿勢改善、ボディメイク、健康促進。初心者も安心の丁寧な指導と多数のピラティスマシンで効果的なトレーニングを。",
+    "seoKeywords": "豊田市 ピラティス, 豊田市, ピラティス, Softis, softis, パーソナルトレーニング, 理学療法士, 姿勢改善, ボディメイク, 健康促進, 駅近",
+    "mainTitle": "豊田市のピラティススタジオ Softis",
+    "mainSubtitle": "豊田市駅徒歩1分の好立地。理学療法士が運営する完全パーソナルピラティススタジオで、あなたの体と心を整えます。",
+    "lookingForTitle": "豊田市でピラティスをお探しの方へ",
+    "description1": "Softisは豊田市駅から徒歩1分、便利なアクセスのピラティススタジオです。理学療法士の資格を持つインストラクターによる丁寧な指導で、初心者の方も安心してトレーニングいただけます。",
+    "description2": "身体の痛みや姿勢の悩み、健康増進まで、一人ひとりの目的に合わせたパーソナルプログラムをご提供します。",
+    "reserveButton": "無料カウンセリング予約",
+    "whyChooseTitle": "豊田市で選ばれる理由",
+    "reason1Title": "理学療法士が指導",
+    "reason1Desc": "医学的知識を持った理学療法士が指導するため、安全で効果的なトレーニングが可能です。",
+    "reason2Title": "駅徒歩1分の好立地",
+    "reason2Desc": "豊田市駅から徒歩たったの1分。通いやすさも大切なポイントです。",
+    "reason3Title": "完全パーソナル対応",
+    "reason3Desc": "一人ひとりの目標や体の状態に合わせたカスタマイズプログラムをご提供します。",
+    "trialButton": "無料体験を予約する"
   }
 } 
